# rsasl

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  LICENSE.MIT  README.md  release.toml
.config/: spell.dic  spellcheck.toml
.github/: dependabot.yaml
.github/workflows/: ci.yml
c2rust/: Cargo.toml  consts.rs  lib.rs
c2rust/src/: base64.rs  callback.rs  crypto.rs  error.rs  free.rs  gc.rs  gsasl.rs  init.rs  lib.rs  listmech.rs  mechtools.rs  property.rs  version.rs  xstart.rs  xstep.rs
c2rust/src/anonymous/: client.rs  mechinfo.rs  server.rs
c2rust/src/cram_md5/: challenge.rs  client.rs  digest.rs  mechinfo.rs  server.rs
c2rust/src/digest_md5/: client.rs  digesthmac.rs  free.rs  getsubopt.rs  mechinfo.rs  nonascii.rs  parser.rs  printer.rs  qop.rs  server.rs  session.rs  validate.rs
c2rust/src/gl/: asnprintf.rs  base64.rs  c_ctype.rs  cloexec.rs  fcntl.rs  fflush.rs  fpurge.rs  free.rs  gc_gnulib.rs  gc_pbkdf2.rs  hmac_sha1.rs  hmac_sha256.rs  ialloc.rs  md5.rs  md5_stream.rs  memxor.rs  printf_parse.rs  sha1.rs  sha256.rs  stat_time.rs  vasnprintf.rs  xsize.rs
c2rust/src/login/: client.rs  mechinfo.rs  server.rs
c2rust/src/openid20/: client.rs  mechinfo.rs  server.rs
c2rust/src/plain/: client.rs  mechinfo.rs  server.rs
c2rust/src/saml20/: client.rs  mechinfo.rs  server.rs
c2rust/src/scram/: client.rs  mechinfo.rs  parser.rs  server.rs  tokens.rs  tools.rs
c2rust/src/securid/: client.rs  mechinfo.rs  server.rs
c2rust/src/src/: base64.rs  crypto.rs  done.rs  mechname.rs  mechtools.rs  property.rs  saslprep.rs  suggest.rs  supportp.rs  xcode.rs  xfinish.rs
docs/decisions/: 0001-property-and-validation-newtype.md  0002-context-vs-provide_any.md  0003-prevent-recursive-callbacks.md
examples/: callback_server.rs  client_simple.rs  mechanism_selection.rs  mechlist.rs  plain_client.rs  plain_server_callback.rs  protocol.rs  scram256_client.rs  scram256_server.rs  scram_client.rs  scram_server.rs  server_plain.rs  server_scram.rs  simple_client.rs
examples/custom_mechanism/: Cargo.toml
examples/custom_mechanism/src/: main.rs
examples/protocol/: Cargo.toml
examples/protocol-client/: Cargo.toml
examples/protocol-server/: Cargo.toml
examples/protocol/src/: lib.rs
gsasl/: Cargo.toml
gsasl-sys/: Cargo.toml  README.md  build.rs  wrapper.h
gsasl-sys/src/: lib.rs  stale_bindings.rs
gsasl/src/: base64.rs  crypto.rs  done.rs  error.rs  lib.rs  md5pwd.rs  suggest.rs  supportp.rs  xfinish.rs  xstart.rs
gsasl/src/anonymous/: client.rs  mechinfo.rs  server.rs
gsasl/src/cram_md5/: client.rs  server.rs
gsasl/src/digest_md5/: mechinfo.rs  parser.rs
gsasl/src/gl/: fd_hook.rs  freading.rs  fseeko.rs  gc_gnulib.rs  malloca.rs  sha1.rs  sha256.rs  sha256_stream.rs  stat_time.rs
gsasl/src/login/: client.rs  server.rs
gsasl/src/openid20/: mechinfo.rs  server.rs
gsasl/src/plain/: client.rs
gsasl/src/saml20/: mechinfo.rs
gsasl/src/scram/: client.rs  mechinfo.rs  server.rs
gsasl/src/securid/: server.rs
interop/: Cargo.toml
interop/gsasl-client/: main.c
interop/src/tests/: login.rs  scram.rs
src/: as_any.rs  buffer.rs  builder.rs  callback.rs  channel_binding.rs  channel_bindings.rs  config.rs  context.rs  error.rs  init.rs  io.rs  lib.rs  mechanism.rs  mechanisms.rs  mechname.rs  property.rs  registry.rs  sasl.rs  session.rs  typed.rs  validate.rs  vectored_io.rs
src/gsasl/: base64.rs  callback.rs  consts.rs  crypto.rs  done.rs  error.rs  free.rs  gc.rs  gsasl.rs  init.rs  listmech.rs  md5pwd.rs  mechname.rs  mechtools.rs  mod.rs  property.rs  register.rs  saslprep.rs  suggest.rs  supportp.rs  version.rs  xcode.rs  xfinish.rs  xstart.rs  xstep.rs
src/gsasl/anonymous/: client.rs  mechinfo.rs  server.rs
src/gsasl/cram_md5/: challenge.rs  client.rs  digest.rs  mechinfo.rs  server.rs
src/gsasl/digest_md5/: client.rs  digesthmac.rs  free.rs  getsubopt.rs  mechinfo.rs  nonascii.rs  parser.rs  printer.rs  qop.rs  server.rs  session.rs  validate.rs
src/gsasl/gl/: af_alg.rs  base64.rs  c_ctype.rs  cloexec.rs  fflush.rs  fpurge.rs  free.rs  fseek.rs  fseeko.rs  gc_gnulib.rs  gc_pbkdf2.rs  hmac_md5.rs  hmac_sha1.rs  hmac_sha256.rs  ialloc.rs  malloca.rs  md5.rs  md5_stream.rs  memxor.rs  printf_args.rs  printf_parse.rs  sha1.rs  sha1_stream.rs  sha256.rs  sha256_stream.rs  stat_time.rs  xsize.rs
src/gsasl/login/: client.rs  mechinfo.rs  server.rs
src/gsasl/openid20/: client.rs  mechinfo.rs  server.rs
src/gsasl/plain/: client.rs  mechinfo.rs  server.rs
src/gsasl/saml20/: client.rs  mechinfo.rs  server.rs
src/gsasl/scram/: client.rs  mechinfo.rs  parser.rs  printer.rs  server.rs  tokens.rs  tools.rs  validate.rs
src/gsasl/securid/: client.rs  mechinfo.rs  server.rs
src/mechanisms/: mod.rs
src/mechanisms/anonymous/: client.rs  mechinfo.rs  server.rs
src/mechanisms/common/: error.rs  properties.rs
src/mechanisms/cram_md5/: challenge.rs  client.rs  digest.rs  mechinfo.rs  server.rs
src/mechanisms/digest_md5/: client.rs  digesthmac.rs  free.rs  getsubopt.rs  mechinfo.rs  nonascii.rs  parser.rs  printer.rs  qop.rs  server.rs  session.rs  validate.rs
src/mechanisms/gssapi/: client.rs  mechinfo.rs  properties.rs  server.rs
src/mechanisms/login/: client.rs  mechinfo.rs  server.rs
src/mechanisms/oauthbearer/: client.rs  mechinfo.rs  parser.rs  properties.rs  server.rs
src/mechanisms/openid20/: client.rs  mechinfo.rs  server.rs
src/mechanisms/plain/: client.rs  mechinfo.rs  server.rs
src/mechanisms/saml20/: client.rs  mechinfo.rs  server.rs
src/mechanisms/scram/: client.rs  mechinfo.rs  parser.rs  printer.rs  properties.rs  server.rs  tokens.rs  tools.rs  validate.rs
src/mechanisms/securid/: client.rs  mechinfo.rs  server.rs
src/mechanisms/xoauth2/: client.rs  mechinfo.rs  properties.rs  server.rs
src/test/: config.rs  mechanism.rs  mod.rs
src/utils/: mod.rs  rustls.rs
tests/: common.rs  mechanism_ordering.rs  plain.rs  scram.rs  scram_sha256.rs
tests/common/: mod.rs
tools/: all.sh  post-flow-release-finish  pre-release.sh
