[package]
name = "gsasl-sys"
version = "0.2.2"
authors = ["Gregor Reitzenstein <me@dequbed.space>"]
edition = "2018"
description = "Raw FFI wrapper for GNU sasl (gsasl)"
license = "MIT"
repository = "https://github.com/dequbed/rsasl"
readme = "README.md"
links = "gsasl"
categories = ["external-ffi-bindings", "authentication"]
keywords = ["SASL"]
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
bindgen = "0.55"

[package.metadata.docs.rs]
rustc-args = ["--cfg", "docsrs"] # Set a compiler flag if we're on docs.rs
