[package]
name = "protocol-server"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
protocol = { path = "../protocol" }

# The server only wants to support SCRAM mechanisms using SHA-2 and PLAIN but no other mechanisms. Thus it depends on
# rsasl with a custom feature set. It's important to enable one of the `registry` flags so that the selected
# mechanisms are available without explicit registration.
rsasl = { path = "../..", features = ["registry_static", "plain", "scram-sha-2"] }