[package]
name = "protocol"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# The protocol implementation depends on rsasl with only the `provider` or `provider_base64` feature enabled.
rsasl = { path = "../..", features = ["provider_base64"] }